# scikit-rf

./: .gitignore  skrf 从 Python 转到 C++14 _README.md
cpp/: CMakeLists.txt  README.md  python_to_cpp_mapping.csv
cpp/include/skrf_cpp/: circuit.h  constants.h  frequency.h  instances.h  mathFunctions.h  microstrip.h  network.h  network_eigen.h  network_set.h  plotting.h  qfactor.h  skrf_cpp.h  taper.h  time.h  tline_functions.h  transforms.h  util.h  vector_fitting.h  vector_fitting_advanced.h
cpp/include/skrf_cpp/calibration/: calibration.h  calibration_set.h  full_calibration.h
cpp/include/skrf_cpp/io/: citi.h  csv.h  general.h  mdif.h  metas.h  touchstone.h
cpp/include/skrf_cpp/media/: circular_waveguide.h  coaxial_full.h  definedAEpTandZ0.h  device.h  distributed_circuit.h  freespace.h  media.h  media_base.h  media_cpw.h  mline.h  rectangular_waveguide.h
cpp/src/: main.cpp  mathFunctions.cpp  network.cpp  util.cpp  vector_fitting.cpp  vector_fitting_advanced.cpp
cpp/src/calibration/: calibration.cpp
cpp/src/io/: citi.cpp  csv.cpp  general.cpp  mdif.cpp  metas.cpp  touchstone.cpp
cpp/src/media/: media.cpp
